test/files/neg/t8244c.check
t8244c.scala:15: error: value exxx is not a member of _$1
    raw.t.exxx
          ^
one error found
